2003-12-16  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-history.h:
	* src/yelp-html.h:
	* src/yelp-util.c:
	* src/yelp-window.c:
	- Removing yelp-scrollkeeper and yelp-sections.

2003-12-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Made sidebar selection follow the page loeded.

2003-12-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	- Add prev, next, and toc to YelpPage.
	- Create menu items for Previous, Next, and Contents.

2003-12-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-window.c:
	- Changed state to a bitfield, easier to extend.
	- Re-added the "contents" signal for faster page-existence checking.

2003-12-13  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Make the page titles work.

	* src/yelp-toc-pager.c:
	- Emit a finish signal.

2003-12-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-html-gtkhtml2.c:
	- Possible fix problem with Find (#128905) (Chee Bin HOH)
	- Fix crasher with Find (#128784) (Chee Bin HOH)

	* src/yelp-window.c:
	- Select existing text in Find dialog (Shaun McCance)

2003-12-08  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.5.1.

2003-12-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Fixed a crasher with gnome_vfs_directory_close.

	* src/yelp-window.c:
	- Moved a declaration to the beginning for ANSI C.

2003-12-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-pager.c:
	- Checking for NULL in pager_set_property before g_object_ref'ing.

2003-12-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Patch from Diego González to fix crashing bug in g_object_new.

2003-12-05  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c
	- Patch from Chee Bin HOH to add Back, Forward, and Find in Page
